--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Spring Boot Development",
-  "image": "mcr.microsoft.com/devcontainers/universal:latest",
+  "image": "mcr.microsoft.com/devcontainers/java:21-bullseye",
   "features": {
     "ghcr.io/devcontainers/features/java:1": {
       "version": "none",
@@ -38,5 +38,5 @@
     }
   },
   "forwardPorts": [8080, 8000],
-  "postCreateCommand": "java -version && mvn -version && spring version && echo 'source \"$HOME/.sdkman/bin/sdkman-init.sh\"' >> ~/.bashrc"
+  "postCreateCommand": "java -version && mvn -version"
 }
