--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -8,9 +8,9 @@
       "installGradle": true
     },
     "ghcr.io/devcontainers-contrib/features/ant-sdkman:2": {},
+    "ghcr.io/devcontainers-extra/features/springboot-sdkman:2": {},
     "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
-    "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
-    "github-cli": "latest"
+    "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {}
   },
   "customizations": {
     "vscode": {
@@ -38,5 +38,5 @@
     }
   },
   "forwardPorts": [8080, 8000],
-  "postCreateCommand": "java -version && mvn -version"
+  "postCreateCommand": "(curl -sSL https://github.com/buildpacks/pack/releases/download/v0.37.0/pack-v0.37.0-linux.tgz | sudo tar -C /usr/local/bin/ --no-same-owner -xzv pack)"
 }
