--- a/docker-model-runner/src/main/resources/application.properties
+++ b/docker-model-runner/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=demo
+
+spring.ai.openai.api-key=ignored
+spring.ai.openai.base-url=http://localhost:12434/engines
+spring.ai.openai.chat.options.model=ai/smollm2
