--- a/docker-compose/src/main/resources/application.properties
+++ b/docker-compose/src/main/resources/application.properties
@@ -5,10 +5,10 @@ management.endpoints.web.exposure.include=*
 server.port=8080
 
 # PostgreSQL Database
-# spring.datasource.url=jdbc:postgresql://localhost:5432/shoppingdb
-# spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.datasource.username=username
-# spring.datasource.password=password
+ spring.datasource.url=jdbc:postgresql://localhost:5432/shoppingdb
+ spring.datasource.driver-class-name=org.postgresql.Driver
+ spring.datasource.username=username
+ spring.datasource.password=password
 
 # JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
