--- a/kubernetes/Dockerfile
+++ b/kubernetes/Dockerfile
@@ -1,7 +1,5 @@
-FROM eclipse-temurin:21-jre
-
+FROM eclipse-temurin:21-jdk-alpine
 WORKDIR /app
-
-COPY target/kubernetes-0.0.1-SNAPSHOT.jar app.jar
-
+COPY target/*.jar app.jar
+EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
