--- a/kubernetes/src/main/resources/application.properties
+++ b/kubernetes/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.aot.enabled=true
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.endpoint.health.group.liveness.include=customLivenessIndicator
+management.endpoint.health.group.readiness.include=customReadinessIndicator
 
