--- a/docker-compose/src/main/resources/application.properties
+++ b/docker-compose/src/main/resources/application.properties
@@ -14,3 +14,8 @@ server.port=8080
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+management.health.probes.enabled=true
