--- a/kubernetes/src/main/resources/application.properties
+++ b/kubernetes/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=kubernetes
 spring.aot.enabled=true
 
-#management.endpoints.web.exposure.include=*
-#management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+#default
+management.health.probes.enabled=true
+
+#custom implementation
 management.endpoint.health.group.liveness.include=customLivenessIndicator
 management.endpoint.health.group.readiness.include=customReadinessIndicator
 
