--- a/docker-compose/src/main/resources/application.properties
+++ b/docker-compose/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.jpa.show-sql=true
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-management.health.probes.enabled=true
+management.endpoint.health.probes.enabled=true
