Upgrade kubernetes module to Spring Boot 4.0.2

--- a/kubernetes/pom.xml
+++ b/kubernetes/pom.xml
@@ -61,6 +61,28 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.openrewrite.maven</groupId>
+				<artifactId>rewrite-maven-plugin</artifactId>
+				<version>6.27.1</version>
+				<configuration>
+					<activeRecipes>
+						<recipe>org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0</recipe>
+					</activeRecipes>
+					<exclusions>
+						<exclusion>**/*.html</exclusion>
+						<exclusion>**/*.htm</exclusion>
+						<exclusion>**/*.md</exclusion>
+					</exclusions>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.openrewrite.recipe</groupId>
+						<artifactId>rewrite-spring</artifactId>
+						<version>6.22.1</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 
